--- a/src/app/[locale]/(auth)/auth.scss
+++ b/src/app/[locale]/(auth)/auth.scss
@@ -293,6 +293,7 @@
 			}
 			@media (max-width: 768px) {
 				gap: 30px;
+				padding: 2.7rem 1rem 0 1rem;
 			}
 			@media(max-width:540px) {
 				gap: 20px;	
@@ -331,8 +332,8 @@
 				@media (min-width: 1920px) {
 					padding: 1rem 0 0 0;
 				}
-				@media (max-width: 375px) {
-					gap: 15px;
+				@media (max-width: 430px) {
+					padding: 1rem 0 1rem 0;
 				}
 
 				.mobile__logo {
