--- a/src/app/[locale]/components/shared/chart.scss
+++ b/src/app/[locale]/components/shared/chart.scss
@@ -57,6 +57,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  gap: 12px;
   color: white;
 
   @media (max-width: 768px) {
@@ -75,8 +76,7 @@
   color: var(--white);
   display: flex;
   align-items: center;
-  gap: 8px;
-
+  justify-content: center;
   &:hover {
     color: #4caf50;
     text-decoration: underline;
@@ -102,8 +102,8 @@
   border: none;
   box-shadow: var(--shadow-split);
   font-size: 12px;
-  padding: 10px 20px;
-  border-radius: 20px;
+  min-width: 80px;
+  border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
   white-space: nowrap; /* Предотвращает перенос текста */
@@ -113,7 +113,6 @@
   }
 
   @media (max-width: 768px) {
-    padding: 10px 15px;
     font-size: 14px;
   }
 }
@@ -123,6 +122,7 @@
   gap: 20px;
   margin: 0 auto;
   align-items: center;
+  justify-content: center;
   text-align: center;
 }
 .profile__chart__button--active {
