--- a/src/app/[locale]/(auth)/auth.scss
+++ b/src/app/[locale]/(auth)/auth.scss
@@ -1,8 +1,17 @@
 :root {
-	--form-wrapper-bg: #1f1f1f;
+	--form-wrapper-bg: #EFEFEF;
+	--form-text: #3A3939;
+	--form-bg: #fff;
+	--input-focus: #3A3939;
+	--selection: #EFEFEF;
+
 }
-.dark-theme {
-	--form-wrapper-bg: #1f1f1f;
+.dark {
+	--form-wrapper-bg: #3C3C3C66;
+	--form-text: #fff;
+	--selection: #3A3939;
+	--form-bg: #000;
+	--input-focus: #f8f8f8;
 }
 .next__btn {
 	display: block;
@@ -48,7 +57,7 @@
 }
 .form__body {
 	overflow-y: auto;
-	background: #000;
+	background: var(--form-bg);
 	width: 100%;
 	height: 100vh;
 	display: flex;
@@ -275,6 +284,12 @@
 			flex-direction: column;
 			justify-content: space-between;
 			gap: 40px;
+			
+			::selection {
+				background: var(--input-focus);
+				color: var(--selection);
+			}
+
 
 			@media (min-width: 1920px) {
 				justify-content: space-between;
@@ -295,7 +310,7 @@
 				gap: 30px;
 				padding: 2.7rem 1rem 0 1rem;
 			}
-			@media(max-width:540px) {
+			@media (max-width:540px) {
 				gap: 20px;	
 			}
 			@media (max-width: 430px) {
@@ -392,7 +407,7 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
-					color: #fff;
+					color: var(--form-text);
 					font-family: inherit;
 					font-size: 20px;
 					font-weight: 500;
@@ -420,6 +435,7 @@
 
 					&.active {
 						background-color: #205bc9;
+						color: #fff;
 					}
 				}
 			}
@@ -463,6 +479,7 @@
 					outline: 1px solid #515151;
 					border-radius: 10px;
 					background: transparent;
+					color: var(--input-focus);
 
 					@media (max-width: 1366px) {
 						padding: 10px 0 10px 12px;
@@ -476,7 +493,7 @@
 					}
 
 					&:focus {
-						outline: 1px solid rgb(248, 248, 248);
+						outline: 1px solid var(--input-focus);
 					}
 
 					// &.invalid {
@@ -556,6 +573,7 @@
 							font-size: 14px;
 							font-weight: 400;
 							line-height: 20px;
+							color: var(--form-text);
 							@media (max-width: 1280px) {
 								line-height: 10px;
 							}
@@ -623,6 +641,7 @@
 							font-size: 16px;
 							font-weight: 400;
 							line-height: 20px;
+							color: var(--form-text);
 
 							@media (max-width: 1024px) {
 								font-size: 14px;
@@ -710,7 +729,7 @@
 					display: flex;
 					align-items: center;
 					gap: 5px;
-					color: #efefef;
+					color: var(--form-text);
 					font-family: inherit;
 					font-size: 20px;
 					font-weight: 400;
@@ -729,7 +748,7 @@
 						display: block;
 						width: 100%;
 						height: 1px;
-						background: #efefef;
+						background: var(--form-text);
 					}
 				}
 
@@ -769,7 +788,7 @@
 					font-size: 20px;
 					font-weight: 400;
 					line-height: 28px;
-					color: #fff;
+					color: var(--form-text);
 					padding: 0 0 1rem 0;
 
 					@media (max-width: 1366px) {
