--- a/src/app/[locale]/(auth)/auth.scss
+++ b/src/app/[locale]/(auth)/auth.scss
@@ -192,7 +192,7 @@
       }
 
       span {
-        color: var(--form-text);
+        color: #fff;
         font-family: inherit;
         font-size: 32px;
         font-weight: 500;
