--- a/src/app/[locale]/(auth)/auth.scss
+++ b/src/app/[locale]/(auth)/auth.scss
@@ -55,6 +55,7 @@
   }
 }
 .form__body {
+  overflow: hidden;
   overflow-y: auto;
   background: var(--form-bg);
   width: 100%;
@@ -75,6 +76,7 @@
   }
   @media (max-width: 430px) {
     justify-content: flex-start;
+    height: 100%;
   }
 }
 ::-webkit-scrollbar {
@@ -84,7 +86,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: max-content;
   width: fit-content;
   background: var(--form-wrapper-bg);
   border-radius: 30px;
@@ -635,7 +636,7 @@
             align-items: center;
             justify-content: space-between;
             gap: 18px;
-						color: var(--form-text);
+            color: var(--form-text);
 
             p {
               font-size: 16px;
