--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -128,7 +128,6 @@
   --faq-bg: url("/main/plus_white.svg");
   --mobile-tapbarbg: #eeeeee;
   --button-border: #3a3939;
-
 }
 .dark {
   --era-title: #205bc9;
@@ -188,8 +187,12 @@ html {
   background: var(--body-color);
 }
 body {
+  overflow-y: auto;
   background: var(--body-color);
   color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .preloader {
   position: fixed;
@@ -215,7 +218,7 @@ body {
 .preloader__white {
   background: #fff;
 }
-// ? Content 
+// ? Content
 
 header {
   background-color: var(--body-color);
@@ -225,7 +228,7 @@ header {
   right: 0;
   height: fit-content;
   width: 100%;
-  z-index: 10;
+  z-index: 999;
   transition: box-shadow 0.3s;
 
   &.box-shadow {
@@ -489,7 +492,7 @@ header {
     overflow: hidden;
     display: block;
     position: fixed;
-    z-index: 10;
+    z-index: 9999;
     width: 428px;
     top: 0;
     right: 0;
@@ -717,11 +720,10 @@ header {
       top: 392px;
       left: 0;
       right: 0;
-      z-index: -1;
-      user-select: none;
-      pointer-events: none;
+      z-index: 0;
       width: 100%;
       height: auto;
+      object-fit: cover;
 
       @media (max-width: 992px) {
         top: unset;
@@ -975,8 +977,8 @@ header {
       bottom: 68px;
       user-select: none;
       pointer-events: none;
-      z-index: -2;
-      width: auto;
+      z-index: 0;
+      width: 100%;
       height: auto;
       object-fit: cover;
     }
@@ -1195,7 +1197,7 @@ header {
       gap: 40px;
       max-width: 620px;
       width: 100%;
-
+      backdrop-filter: blur(3px);
       @media (max-width: 1830px) {
         width: 32.29vw;
         padding: 2.292vw 2.083vw;
@@ -1581,7 +1583,7 @@ header {
       left: 0;
       right: 0;
       bottom: 0;
-      z-index: -2;
+      z-index: 0;
     }
     .levels__bg-field {
       position: absolute;
@@ -1592,7 +1594,7 @@ header {
       height: 508px;
       background: var(--how-itemBg);
       box-shadow: var(--get-item-shadow);
-      backdrop-filter: blur(2.5px);
+      backdrop-filter: blur(5px);
       border-radius: 30px;
       display: block;
       @media (max-width: 1830px) {
@@ -2233,7 +2235,7 @@ header {
   }
 
   &__faq {
-    padding: 120px 0 20px;
+    padding: 120px 0 7rem;
     @media (max-width: 992px) {
       padding: 40px 0 0 0;
     }
@@ -2918,8 +2920,7 @@ header {
       margin-bottom: 40px;
 
       @media (min-width: 1200px) {
-      height: 436px;
-
+        height: 436px;
       }
 
       @media (max-width: 768px) {
@@ -2972,6 +2973,7 @@ header {
             border-radius: 50px;
             max-width: 300px;
             cursor: pointer;
+            color: #fff;
 
             @media (max-width: 768px) {
               font-size: 16px;
@@ -2991,14 +2993,11 @@ header {
 
     .profile__industy {
       background-color: var(--getstarted-item);
-      display: flex;
       min-height: 435px;
       box-shadow: var(--shadow-split);
       max-width: 536px;
       width: 100%;
-      flex-direction: column;
       margin-bottom: 40px;
-      align-items: center;
 
       .profile__industry__main_text {
         text-align: center;
@@ -3009,12 +3008,12 @@ header {
       }
 
       .profile__industry__block {
-        display: flex;
         background-color: var(--profile-block);
+        display: flex;
         flex-direction: column;
-        gap: 20px;
         align-items: center;
         justify-content: center;
+        gap: 20px;
         margin-top: 32px;
         margin-bottom: 24px;
         min-height: 250px;
@@ -3055,7 +3054,9 @@ header {
         border-radius: 50px;
         max-width: 300px;
         cursor: pointer;
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
       }
 
       .profile__industry__button:hover {
@@ -3492,25 +3493,28 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0px 35px;
     border-radius: 30px;
     background-color: var(--profile-block);
     color: var(--text-color);
     box-shadow: var(--shadow-split);
     margin-bottom: 30px;
+    padding: 0 20px;
 
     @media (min-width: 481px) and (max-width: 640px) {
       background-color: transparent;
       box-shadow: none;
     }
-    @media (max-width: 768px) {
-      padding: 0 15px;
-    }
+
     @media (max-width: 640px) {
       background-color: transparent;
       border-top: 1px solid var(--gray-color);
       border-radius: 0%;
       box-shadow: none;
+      padding: 0;
+      td {
+        padding: 1rem 0.5rem;
+        font-size: 12px;
+      }
     }
 
     @media (max-width: 1280px) {
